<resources>
    <string name="app_name">tUtorSearCher</string>
    <string name="title_home">Search</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Requests</string>
    <string name="title_activity_login">tUtorSearCher</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid USC email</string>
    <string name="invalid_password">Password must be at least 5 characters long</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">"Register"</string>
    <string name="testview">"testtesttest"</string>

    <string-array name="LoginSpinnerOptions">
        <item>Tutor</item>
        <item>Tutee</item>
    </string-array>

    <string-array name="DaySpinnerOptions">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="CourseSpinnerOptions">
        <item>CSCI103</item>
        <item>CSCI104</item>
        <item>CSCI109</item>
        <item>CSCI170</item>
        <item>CSCI201</item>
        <item>CSCI270</item>
        <item>CSCI310</item>
    </string-array>

    <string-array name="TimeSpinnerOptions">
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
